tests/ivg/invalid/cursor_no_args.ivg
format IVG-3
BOUNDS 0,0,10,10
// cursor without any arguments should fail
PATH [move-to 0,0; cursor]

